Base docker image on jdk11 (and drop  as was removed)